[gd_scene load_steps=2 format=3 uid="uid://4cltpjumsgaf"]

[ext_resource type="Script" uid="uid://ikdvjci0mkgr" path="res://graphics/battlefield/map.gd" id="1_heo5x"]

[node name="Map" type="Node2D"]
script = ExtResource("1_heo5x")

[node name="Background" type="Sprite2D" parent="."]

[node name="GroundLayer" type="Node2D" parent="."]
z_index = 1

[node name="Object1Layer" type="Node2D" parent="."]
z_index = 2

[node name="Object2Layer" type="Node2D" parent="."]
z_index = 3

[node name="CellIDSLayer" type="Node2D" parent="."]
visible = false
z_index = 4
